--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html><head><style>
+  body {
+  background-color: #434343;
+  color: #eee;
+  font-family: 'Times New Roman';
+}</style>
 <body>
   <pre>
-  Sql statements</b>
+  <b>Sql statements</b>
  <img src="img.png">
 <b>Referential integrity</b>
 Referential integrity refers to the relationship between tables. ... Referential integrity is the logical dependency of a foreign key on a primary key. The integrity of a row that contains a foreign key depends on the integrity of the row that it references—the row that contains the matching primary key 
