--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html><head><style>
+<html><head><script data-ad-client="ca-pub-7755026318062086" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script data-ad-client="ca-pub-7755026318062086" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><style>
   body {
   background-color: #434343;
   color: #eee;
