--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   background-color: #434343;
   color: #eee;
   font-family: 'Times New Roman';
+  font-size: calc();
+  border-style: solid;
 }</style>
 <body>
   <pre>
