--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <html><head><script data-ad-client="ca-pub-7755026318062086" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script data-ad-client="ca-pub-7755026318062086" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><style>
   body {
-  background-color: #434343;
-  color: #eee;
   font-family: 'Times New Roman';
-  font-size: 22 pt;
+  font-size: 1.17em;
   border-style: solid;
 }</style>
 <body>
@@ -13,18 +11,25 @@
   <b>Sql statements</b>
  <img src="img.png">
 <b>Referential integrity</b>
-Referential integrity refers to the relationship between tables. ... Referential integrity is the logical dependency of a foreign key on a primary key. The integrity of a
-row that contains a foreign key depends on the integrity of the row that it references—the row that contains the matching primary key 
+Referential integrity refers to the relationship between tables. ... Referential integrity
+is the logical dependency of a foreign key on a primary key. The integrity of a
+row that contains a foreign key depends on the integrity of the row that it references—the
+row that contains the matching primary key 
 <b>Foreign key</b>
-Referential integrity refers to the relationship between tables. ... Referential integrity is the
-logical dependency of a foreign key on a primary key. The integrity of a row that contains a
+Referential integrity refers to the relationship between tables. ... Referential integrity is
+the logical dependency of a foreign key on a primary key. The integrity of a row that contains a
 foreign key depends on the integrity of the row that it references—the row that contains the
 matching primary key 
 <b>Binary Search</b>
-Search a sorted array by repeatedly dividing the search interval in half. Begin with an interval covering the whole array 
+Search a sorted array by repeatedly dividing the search interval in half. Begin with an 
+interval covering the whole array 
 <b>Stack applications </b>
 Expression Evaluation.
-Expression Conversion. i. Infix to Postfix. ii. Infix to Prefix. iii. Postfix to Infix. iv. Prefix to Infix.
+Expression Conversion.
+i. Infix to Postfix.
+ii. Infix to Prefix.
+iii. Postfix to Infix. 
+iv. Prefix to Infix.
 Backtracking.
 Memory Management.
 <b>OOP concepts</b>
