--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
   border-style: solid;
 }</style>
 <body>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7755026318062086"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-7755026318062086"
+     data-ad-slot="2022351190"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   <pre>
   <b>Sql statements</b>
  <img src="img.png">
